assets/themes/coredna/static/sass/default.scss
@font-face {
    font-family: 'liberation_monoregular';
    src: url('../fonts/LiberationMono-Regular-webfont.eot');
    src: url('../fonts/LiberationMono-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/LiberationMono-Regular-webfont.woff') format('woff'),
         url('../fonts/LiberationMono-Regular-webfont.ttf') format('truetype'),
         url('../fonts/LiberationMono-Regular-webfont.svg#liberation_monoregular') format('svg');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'liberation_monobold';
    src: url('../fonts/LiberationMono-Bold-webfont.eot');
    src: url('../fonts/LiberationMono-Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/LiberationMono-Bold-webfont.woff') format('woff'),
         url('../fonts/LiberationMono-Bold-webfont.ttf') format('truetype'),
         url('../fonts/LiberationMono-Bold-webfont.svg#liberation_monobold') format('svg');
    font-weight: normal;
    font-style: normal;

}

@import 'theme.scss';
@import 'badge_only.scss';

/*
 * pre styles
 *
 */

div[class^='highlight'] td.code pre {
	padding-left:0;
}
div[class^='highlight'] pre {
	background:#272822;
	color:#eee;
	font-family:'liberation_monoregular',menlo,Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace;
	font-size:85%;
	span {
		position: relative;
		left:-13px;
	}
}

.na {
	color:#fff;
}
.nf {
	color:#f62671;
}
.s1 {
	color:#fd971f;
}
.m, .nv {
	color:#e6db74;
}
div[class^='highlight'] td.code, .linenos {
	margin:0;
	padding:0;
	border:0;
}
.linenodiv pre {
	border-right:1px solid #4d4d4d;
}

.wy-nav-side {
	position: absolute;
}

.wy-menu-vertical li.on a, .wy-menu-vertical li.current>a {
	background:#ff0037;
	color:#fff;
	border:0;
}

.wy-menu-vertical li.on a:hover, .wy-menu-vertical li.current>a:hover {
	background:darken(#ff0037,10%);
}

.wy-menu-vertical a:active {
	background:#eee;
}

.icon-home {
	display:none !important;
}

.wy-side-nav-search {
	background:none;
}

.wy-nav-content-wrap, .wy-nav-content {
	background:#fff;
}

.wy-nav-content {
	max-width: inherit;
}

*, *:before, *:after {
	transition:all 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

.rst-content tt.literal, .rst-content tt.literal, .rst-content code.literal {
	background:rgba(0,0,0,0.04);
	color:#333;
	box-shadow:0 0 6px rgba(0,0,0,0.05);
	font-size:85%;
}

code, .rst-content tt, .rst-content code {
	font-family:'liberation_monobold',menlo,Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace
}

.rst-versions.rst-badge {
	width:300px;
	bottom:0;
	right:auto;
	left:0;
}

div#breadcrumbs {
	background:#343131;
	box-shadow: 0 0 6px rgba(0,0,0,0.5);
	&:after {
		content: '';
		clear:both;
		display: block;
	}
	.breadcrumbs {
		margin-left:15px;
		li {
			&.toctree-l1 {
				display: block;
			}
			float:left;
			&.current a {
				background:#ff0037;
			}
			& > span {
				color:#fff;
				display:block;
				padding:15px 10px 15px 0px;
				&:hover {
					color:#fff;
				}
			}
		}
		a {
			color:#9b9b9b;
			display:block;
			padding:15px 10px 15px 0px;
			&:visited {
				color:#9b9b9b;
			}
			&:hover {
				color:#a0a0a0;
			}
			&:after {
				content:'>';
				padding-left:10px;
			}
		}
		.breadcrumbs__github {
			background:#343131;
			position: absolute;
			right:0;
			a {
				padding:15px;
				&:after {
					display: none;
				}
			}
		}

	}
}

.search {
	margin:0 8px;
}

.wy-side-scroll {
	width:100%;
}
.wy-side-scroll, .wy-nav-top {
	.logo {
		img {
			width:60%;
		}
		text-align: center;
		padding:23px 25px;
		display: block;
	}
}

.wy-nav-top {
	background:#343131;
	line-height: inherit;
	padding: 4px 15px;

    .logo {
		padding: 1px 0;

		img {
			background: transparent;
			border-radius: 0;
			height: 39px;
			padding: 0;
			margin: 0;
			width: auto;
		}
	}
}

.wy-side-nav-search  {
	input[type=text] {
		border-radius:0;
		background:none;
		border:0;
		box-shadow: inherit;
		position: relative;
		border-bottom:1px solid #726f6f;
		padding-left:0;
		transition:all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
		color:#fff;
		&:focus {
			& ~ .search__line {
				left:0%;
				width:100%;
			}
		}
	}
	.search__line {
		content:'';
		height:1px;
		position: absolute;
		left:50%;
		bottom:0;
		width:0%;
		display: block;
		background:#fff;
		z-index: 10;
		transition:all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
	}
}

.wy-form {
	position: relative;
}
.sticky--active {
	.wy-nav-side {
		position: fixed;
	}
}

@media screen and (max-width: 1024px) {
	.wy-nav-side {
		width: 225px;
	}
	.wy-nav-content-wrap {
		margin-left: 225px;
	}
	div#breadcrumbs {
		.breadcrumbs {
			.toctree-path > a {
				display: none;
			}
		}
	}
}

@media screen and (max-width: 768px) {
	.wy-nav-content-wrap {
		margin-left: 0;
	}
	.wy-side-scroll {
		.logo {
			display: none;
		}
	}
	div#breadcrumbs {
		display:none;
	}
}

footer p {
	font-size:11px;
}

